data/rq1/k1/rust_code/final_projects/host__25c1898e1626/translate_by_qwen3_coder/preprocessed_header.h

typedef unsigned int size_t;
typedef signed int int32_t;
typedef unsigned int UINT32;
typedef UINT32 size_t;
typedef struct {
    volatile int32_t counter;
} OsalAtomic;
struct HdfSRef;
struct IHdfSRefListener {
    void (*OnFirstAcquire)(struct HdfSRef *);
    void (*OnLastRelease)(struct HdfSRef *);
};
struct HdfSRef {
    OsalAtomic refs;
    struct IHdfSRefListener *listener;
    void (*Acquire)(struct HdfSRef *);
    void (*Release)(struct HdfSRef *);
    int (*Count)(const struct HdfSRef *);
};
int HdfSRefCount(const struct HdfSRef *sref);
void HdfSRefConstruct(struct HdfSRef *sref, struct IHdfSRefListener *listener);
void *OsalMemCalloc(size_t size);
void OsalMemFree(void *mem);