data/rq1/k10/rust_code/final_projects/host__25c1898e1626/translate_by_qwen3_coder/.c2r_bindgen_extern/power_state_token_91894a61.externs.rs

/* automatically generated by rust-bindgen 0.72.1 */

pub type size_t = ::core::ffi::c_uint;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct OsalAtomic {
    pub counter: i32,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct IHdfSRefListener {
    pub OnFirstAcquire: ::core::option::Option<unsafe extern "C" fn(arg1: *mut HdfSRef)>,
    pub OnLastRelease: ::core::option::Option<unsafe extern "C" fn(arg1: *mut HdfSRef)>,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct HdfSRef {
    pub refs: OsalAtomic,
    pub listener: *mut IHdfSRefListener,
    pub Acquire: ::core::option::Option<unsafe extern "C" fn(arg1: *mut HdfSRef)>,
    pub Release: ::core::option::Option<unsafe extern "C" fn(arg1: *mut HdfSRef)>,
    pub Count:
        ::core::option::Option<unsafe extern "C" fn(arg1: *const HdfSRef) -> ::core::ffi::c_int>,
}
unsafe extern "C" {
    pub fn HdfSRefCount(sref: *const HdfSRef) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn HdfSRefConstruct(sref: *mut HdfSRef, listener: *mut IHdfSRefListener);
}
unsafe extern "C" {
    pub fn OsalMemCalloc(size: size_t) -> *mut ::core::ffi::c_void;
}
unsafe extern "C" {
    pub fn OsalMemFree(mem: *mut ::core::ffi::c_void);
}
